css/add_task/add_task_media.css
@media (min-width: 761px) {
  .section-title {
    left: 264px;
    top: 144px;
  }
  .at-label-style,
  .at-prio {
    margin-top: 32px;
  }
  .content-container {
    max-height: calc(100vh - 320px);
    padding: 0 32px 16px 32px;
    margin: 232px 0 0 calc(232px);
  }
  .content-bottom-container {
    max-width: 1310px;
    margin: 0 0 0 calc(232px);
    padding-inline: 32px;
    bottom: 0px;
  }
  .hide-clear-btn {
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 22px;
    height: 45px;
  }
  .bottom-btns-container {
    display: flex;
    gap: 16px;
  }
  .at-prio-img img:hover {
    transform: scale(1.05);
  }
  .assigned-to-box.selected-contact-at:hover,
  .category-dropdown ul li.selected-contact-at:hover {
    background: var(--focus-color-btn);
  }
  .assigned-to-box:hover,
  .category-dropdown ul li:hover,
  .subtask-list ul li:hover {
    background: var(--placeholder-color);
  }
  .subtask-list ul li:hover .vertical-line {
    background: var(--mockup-color);
  }
  .assigned-to-box:active,
  .category-dropdown ul li:active {
    background: var(--focus-color-btn);
    color: white;
  }
  .assigned-to-box:active svg rect {
    stroke: white;
  }
  .assigned-to-box.selected-contact-at:active,
  .category-dropdown ul li.selected-contact-at:active {
    background: #11305f;
  }
  .editable-span {
    max-width: 42vw;
  }
}
@media (min-width: 954px) {
  .at-prio-img {
    justify-content: center;
    gap: 48px;
  }
  .editable-span {
    max-width: 53vw;
  }
}
@media (min-width: 1341px) {
  .board-at-headline {
    left: 74px;
  }
  .at-label-style {
    color: var(--mockup-color);
  }
  .at-prio div {
    color: black;
  }
  .at-prio-img {
    justify-content: space-between;
    gap: 0px;
  }
  .at-section {
    width: 100%;
  }
  .assigned-to-user span {
    max-width: 17vw;
  }
  .content-container {
    position: static;

    margin: 264px 70px 0px calc(232px + 64px);
    max-height: calc(100vh - 424px);
    box-shadow: 0 0 14px #2a364739;
    border-radius: 24px;
    display: flex;
    align-items: start;
    gap: 32px;
    background: white;
    max-width: 1110px;
    overflow-x: hidden;
  }
  .content-top-and-left,
  .content-bottom-and-rigth {
    width: 100%;
  }
  .vertical-bar-container {
    margin-top: 39px;
    height: auto;
    display: flex;
    justify-content: center;
    align-items: center;
  }
  .vertical-bar {
    height: 425px;
    background-color: var(--placeholder-color);
    border-radius: 1px;
    width: 1px;
  }
  .section-title {
    top: 180px;
    left: 330px;
    font-size: 64px;
    line-height: 73.2px;
  }
  .content-bottom-container {
    margin: 0px 64px 0 calc(232px + 64px);
    max-width: 1920px;
    box-shadow: 0 0 14px #2a364739;
    border-radius: 20px;
    height: 64px;
    max-width: 1110px;
  }
  .editable-span {
    max-width: 25vw;
  }
}

@media (min-height: 1305px) and (min-width: 761px) {
  .content-bottom-container {
    bottom: auto;
    top: 1200px;
  }
}
@media (min-height: 900px) and (min-width: 1341px) {
  .content-bottom-container {
    bottom: auto;
    top: 800px;
  }
}

@media (min-height: 1379px) and (max-width: 760px) {
  .content-bottom-container {
    bottom: auto;
    top: 1200px;
  }
}

@media (max-width: 1013px) {
  .assigned-to-user span {
    max-width: 40vw;
  }
}
@media (max-width: 824px) {
  .required-msg {
    font-size: 16px;
    transition: all 200ms ease-in-out;
  }
  .rotate-err-arrow {
    width: 14px;
    height: 16px;
  }
}
@media (max-width: 780px) {
  .bottom-btns-container {
    gap: 2px;
  }
}
@media (max-width: 760px) {
  .content-container {
    max-height: calc(100vh - 380px);
  }
  .at-label-style,
  .at-prio {
    margin-top: 32px;
  }
  .section-title {
    left: 16px;
    top: 144px;
  }
  .editable-span {
    max-width: 66vw;
  }
  .assigned-to-box:active svg rect {
    stroke: white;
  }
  .assigned-to-box:active,
  .category-dropdown ul li:active,
  .category-dropdown ul li.selected-contact-at:active,
  .assigned-to-box.selected-contact-at:active {
    background: var(--focus-color-btn);
    color: white;
  }
  li:active .hidden-Edit_menu {
    display: flex;
  }
  .subtask-list ul li:active {
    background: var(--placeholder-color);
  }
  .required-msg {
    font-size: 18px;
  }
  .rotate-err-arrow {
    width: 14px;
    height: 14px;
  }
}
@media (max-width: 500px) {
  .editable-span {
    max-width: 50vw;
  }
}
@media (max-width: 466px) {
  .at-label-style,
  .at-prio {
    margin-top: 16px;
  }
  .at-prio-img img {
    height: 32px;
    width: 87px;
  }
  .section-title {
    font-size: 43px;
  }
  .at-label-style,
  .assigned-to-user,
  .editable-span,
  .content-bottom-container,
  .bottom-btns-container button {
    font-size: 18px;
  }
  .assigned-to-box {
    padding: 8px 7px;
  }
  .circle-style {
    width: 30px;
    height: 30px;
  }
  .circle-style span {
    font-size: 12px;
  }
  .required-msg {
    font-size: 14px;
  }
  .assigned-to-box svg {
    margin-right: 12px;
  }
  .subtask-list ul li {
    padding: 4px 12px;
    margin-inline: 12px;
  }
  .filled-btn {
    width: 150px;
    height: 40px;
  }
  .rotate-err-arrow {
    width: 12px;
    height: 12px;
  }
  .subtask-err-msg {
    font-size: 16px;
    top: 1px;
    left: 85px;
  }
  .content-bottom-container {
    height: 50px;
  }
  .content-container {
    max-height: calc(100vh - 340px);
  }
}
@media (max-width: 418px) {
  .editable-span {
    max-width: 40vw;
    margin-right: 12px;
  }
}
@media (max-width: 344px) {
  .assigned-to-box {
    padding: 6px 7px;
  }
  .assigned-to-user {
    gap: 8px;
  }
  .assigned-to-box svg {
    margin-right: 2px;
  }
  .required-msg {
    font-size: 12px;
  }
}
@media (min-width: 2500px) {
  .success-msg-popup {
    top: calc(50%);
    left: 1180px;
  }
}
@media (min-width: 1341px) and (max-height: 900px) {
  .section-title {
    top: 116px;
  }
  .content-container {
    margin: 200px 70px 0px calc(232px + 64px);
    max-height: calc(100vh - 290px);
  }
}
@media (min-width: 1341px) and (max-height: 700px) {
  .content-container {
    margin: 179px 70px 0px calc(232px + 64px);
    max-height: calc(100vh - 268px);
    box-shadow: none;
  }
}
@media (min-width: 1341px) and (max-height: 573px) {
  .section-title {
    font-size: 47px;
    top: 100px;
  }
  .content-container {
    margin: 162px 70px 0px calc(232px + 64px);
    max-height: calc(100vh - 230px);
  }
  .content-bottom-container {
    padding-bottom: 4px;
  }
}
@media (max-width: 1340px) and (max-height: 900px) {
  .section-title {
    top: 116px;
  }
  .content-container {
    margin: 200px 0px 0px calc(232px);
    max-height: calc(100vh - 290px);
  }
}
@media (max-width: 1340px) and (max-height: 573px) {
  .section-title {
    font-size: 47px;
    top: 100px;
  }
  .content-container {
    margin: 150px 0px 0px calc(232px);
    max-height: calc(100vh - 240px);
  }
}
@media (max-width: 1340px) and (max-height: 400px) {
  .content-bottom-container {
    background: transparent;
    height: auto;
    padding-bottom: 4px;
  }
  .content-container {
    margin: 160px 0px 0px calc(232px);
    max-height: calc(100vh - 250px);
  }
}
@media (max-width: 760px) and (max-height: 900px) {
  .content-container {
    margin: 180px 0px 0px 0;
    max-height: calc(100vh - 340px);
  }
}
@media (max-width: 760px) and (max-height: 573px) {
  .section-title {
    font-size: 47px;
    top: 100px;
  }
  .content-container {
    margin: 150px 0px 0px 0;
    max-height: calc(100vh - 310px);
  }
}

@media (max-width: 466px) and (min-height: 1147px) {
  .content-bottom-container {
    bottom: auto;
    top: 1000px;
  }
}

@media (max-width: 466px) and (max-height: 573px) {
  .section-title {
    font-size: 47px;
    top: 100px;
  }
  .content-container {
    margin: 150px 0px 0px 0;
    max-height: calc(100vh - 280px);
  }
}
@media (max-width: 760px) and (max-height: 516px) {
  .section-title {
    display: none;
  }
  .content-container {
    margin: 100px 0px 0px 0;
    max-height: calc(100vh - 230px);
  }
  .content-bottom-container {
    background: transparent;
    height: auto;
    padding-bottom: 4px;
  }
  .at-label-style,
  .at-prio {
    margin-top: 0px;
  }
  .at-label-style,
  .assigned-to-user,
  .editable-span,
  .content-bottom-container,
  .bottom-btns-container button {
    font-size: 12px;
  }
}

